# project-zap-company

./: .gitignore  CURRENT_TASK.md  PROJECT.md  SIGNUP_FORM_SETUP.md  artifacts.json  audit_molecules.js  biome.json  check_gridfs.ts  check_keys.js  claude.md  design-log.txt  docker-compose.infra.yml  downloaded_screen.html  fix-mission-control.js  full_site_audit_with_tags.md  gemini.md  history_verify.json  implementation_plan.md  insert_mock_skill.js  learn.md  migrate_l4.js  migrate_l4_v2.js  olympus-full-page-catalog.md  olympus-route-registry.md  package-lock.json  package.json  package.json.1979685935  pnpm-lock.yaml  stitch_screen.html  strip_legacy_shells.js  swarm_audit_with_tags.md  test-color.js  test-db-connection.ts  test-login.ts  test_artifact.ts  tmp-db-discovery.mjs  tmp-debug.js  tmp-debug.ts  tmp-screenshot.mjs  tmp_checkpoint.js  (+6 more)
.agent/: gsd-file-manifest.json  init-agent.sh  learning.md
.agent/agents/: gsd-ui-auditor.md
.agent/rules/: design-system-strictness.md
.agent/skills/: skills-directory.md
.agent/workflows/: auto-run.md  m3-token-standard.md  zap-l1-l2-structural-standards.md
.context/: tokens.toon
app/: Olympus.slnx  docker-compose.yml
apps/auth/: hex.txt  next.config.js  package.json  package.json.1911807176  public  tsconfig.json
apps/kiosk/: package.json
apps/merchant/: next.config.ts  package.json
apps/mission-control/: next.config.js  package.json  package.json.3854125587
apps/operations/: build_output.txt  package.json  package.json.787357022
apps/portal/: package.json
apps/pos/: package.json
apps/reports/: package.json
apps/settings/: package.json
apps/web/: next.config.ts  package.json  tsconfig.json
apps/zap-gateway/: Cargo.toml
apps/zap-gateway/src/: lib.rs  main.rs
apps/zap-sandbox-cli/: Cargo.toml
apps/zap-swarm/: eslint.config.mjs  next.config.mjs  package.json  playwright-results.txt  playwright.config.ts  setup-cache-p2.js  setup-cache.js  snap.js  snapshot.mjs  storageState.json  test-perf.js  tsconfig.json
docs/: STATE_SUMMARY.md  architecture.md  collaboration-guide.md  cross-workspace-map.md  docs-directory.md  localhost_3200_scan.md  master-registry.md  olympus-protocols.md  progress_summary.md  task.md  update-docs-registry.py  zap_tech_stack.md
docs/blast/: 2026-04-02-001_master_harness_init.md  blast-003-theme-remix-refactor.md  blast-004-theme-remix-qa-protocol.md  blast-014-gemini-fleet-arbitrage.md  blast-015-workspace-documentation-standard.md  blast-018-micro-swarm-specialization.md  blast-019-m3-typography-alignment.md  blast-020-molecule-audit-post-mortem.md
docs/designs/: clean-shell.fig  stitch-typography-review.fig  typography-shell.fig
docs/management/: audit-report.md  success-metrics.md
docs/projects/: prj-015-gemini-fleet-business-prd.md  prj-016-olympus-native-agency.md  prj-017-evolution-arena.md
docs/references/: zap_architecture_explanation.md
docs/reports/: audit_matrix_l1_l3.md  deerflow_implementation_plan.md  deerflow_ui_spec.md
docs/sops/: 100k-scale-architecture.md  sop-001-brand-guidelines.md  sop-002-a2a-protocol.md  sop-003-navigation-architecture.md  sop-004-typography-architecture.md  sop-005-atomic-theme-physics.md  sop-009-architecture-standard.md  sop-011-brand-authority.md  sop-011-design-to-code-pipeline.md  sop-012-m3-programmatic-bridge.md  (+25 more)
docs/zap-claw/: roadmap.md  (+25 more)
rust/: Cargo.toml  check.out
rust/crates/gateway/: Cargo.toml
rust/crates/gateway/src/: main.rs
rust/crates/kairos/: Cargo.toml
rust/crates/kairos/src/: lib.rs  main.rs  tick.rs
rust/crates/plugins/: Cargo.toml
rust/crates/plugins/src/: lib.rs
rust/crates/runtime/: Cargo.toml
rust/crates/runtime/src/: lib.rs
rust/crates/vector/: Cargo.toml
rust/crates/vector/src/: lib.rs
rust/scripts/: verify_harness.sh
scratch/: reset-dev.ps1  reset_windows.ps1  test_proxy.js  test_proxy_minimal.js
scripts/: apply-theme-publisher.ts  oly_tag.sh  seed-workspaces.mjs  sync_olympus_sops.sh  unblock.js
tmp-prisma/: schema.prisma
(+936 files in other folders)
