[workspace]
members = [
    "crates/kairos",
    "crates/runtime",
    "crates/plugins",
    "crates/gateway",
    "crates/vector",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono"] }
fred = { version = "9.2", features = ["subscriber-client", "serde-json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.14", features = ["v4", "serde"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
tokio-stream = "0.1"
async-stream = "0.3"
futures = "0.3"
walkdir = "2"
thiserror = "1"
tower-http = { version = "0.5", features = ["cors", "trace"] }
