[package]
name = "zap-gateway"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1"
axum = "0.7.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["stream", "json"] }
bytes = "1.5.0"
futures = "0.3.30"
tower-http = { version = "0.5.2", features = ["cors"] }
dotenvy = "0.15"
