[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tower-http = { workspace = true }
futures = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
fred = { workspace = true }
sqlx = { workspace = true }
async-stream = "0.3"

# Internal workspace dependencies
runtime = { path = "../runtime" }
plugins = { path = "../plugins" }

[[bin]]
name = "gateway"
path = "src/main.rs"
