[package]
name = "vector"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
walkdir = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[lib]
path = "src/lib.rs"
